--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,6 @@ jobs:
         git pull origin main
         npm install
         npm run build
+        cp .env dist
         pm2 restart checkout || exit
         EOF
