--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,9 @@ jobs:
     - name: Deploy to Server
       run: |
         sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no -o ServerAliveInterval=60 -o ServerAliveCountMax=10 -o TCPKeepAlive=yes ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << EOF
-        cd /var/www/checkout-valkyrie|| exit
+        # Carregar o ambiente do usuário corretamente, incluindo o NVM
+        source /home/valkyriecheckout-api/.nvm/nvm.sh
+        cd htdocs/checkout.valkyriecheckout.com/checkout-valkyrie|| exit
         git pull origin main
         npm install
         npm run build
